feat(print-profile): maintain operator print details
